2007-08-20  Tom Tromey  <tromey@redhat.com>

	* c-parser.c (the_parser): Updated comment.
	(c_parser) <tokens>: Removed.
	<buffer, buffer_length, next>: New fields.
	(c_parser_lex_all): New function.
	(c_hack_token): Likewise.
	(c_lex_one_token): Simplify.
	(c_parse_file): Use c_parser_lex_all.
	(c_parser_set_source_position_from_token): Moved earlier.

2007-08-20  Tom Tromey  <tromey@redhat.com>

	* c-common.c (fname_as_string): Update.
	* c-parser.c (c_parser) <lex_untranslated_string>: New field.
	(c_lex_one_token): Update.  Add 'parser' argument.
	(c_parser_simple_asm_expr): Update.
	(c_parser_attributes): Update.
	(c_parser_asm_statement): Update.
	(c_parser_asm_operands): Update.
	(c_parser_peek_token): Update.
	(c_parser_peek_2nd_token): Update.
	* c-lex.c (c_lex_string_translate): Remove.
	(c_lex_return_raw_strings): Likewise.
	(c_lex_with_flags): Added 'lex_flags' argument.
	(lex_string): Added 'translate' argument.
	* c-pragma.h (c_lex_with_flags): Update.
	(c_lex_string_translate, c_lex_return_raw_strings): Remove.
	(C_LEX_STRING_NO_TRANSLATE): New define.
	(C_LEX_RAW_STRINGS): Likewise.

2007-08-20  Pawel Sikora  <pluto@pld-linux.org>

        * doc/invoke.texi (-Wnon-virtual-dtor): Update documentation.

2007-08-20  David Edelsohn  <edelsohn@gnu.org>

	* dwarf2out.c (text_section_used): Move declaration outside ifdef
	DWARF2_DEBUGGING_INFO.
	(cold_text_section_used): Same.
	(cold_text_section): Same.

2007-08-20  Richard Guenther  <rguenther@suse.de>

        * c-typeck.c (convert_for_assignment): Use the type of
        the member for the initialization.

2007-08-20  Richard Guenther  <rguenther@suse.de>

	* c-objc-common.c (c_disregard_inline_limits): Remove.
	* c-objc-common.h (c_disregard_inline_limits): Likewise.
	* cgraphunit.c (cgraph_process_new_functions): Call
	disregard_inline_limits_p.
	(cgraph_preserve_function_body_p): Likewise.
	* ipa-inline.c (compute_inline_parameters): Likewise.